# socki_mac

./: CMakeLists.txt  README.md
src/: MemoryManagement.h  dynamic_memory.h  game.cpp  game.h  input.cpp  input.h  mac_input.cpp  main.cpp  my_game.cpp  types.h
